1. added get all answers endpoint 2. fixed minor bugs
